Archive2/0b/0298e5a4533887/output
main.cpp: In function 'int main()':
main.cpp:13:9: error: assignment of read-only member 'T::y'
     a.y = 6;
         ^
